[package]
name = "app_helper"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "AppHelper library for Rust projects"
documentation = ""
homepage = ""
keywords = ["app", "conf"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
build = false

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"

arc-swap = { path = "../../libs/arc-swap" }
atomic = { path = "../../libs/atomic-rs" }
hashbrown = { path = "../../libs/hashbrown" }
parking_lot = { path = "../../libs/parking_lot" }
#roxmltree = { path = "../../libs/roxmltree" }
clap = { path = "../../libs/clap" }
commlib = { path = "../../libs/commlib" }
my_logger =  { path = "../../libs/my_logger-rs" }
my_service = { path = "../../libs/my_service-rs" }
net_packet = { path = "../../libs/net_packet-rs" }

prost = { path = "../../libs/prost"}
proto_inner = { path = "../proto_inner-rs" }