[package]
name = "game-proto"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Game proto library"
edition = "2021"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tonic = "0.10"

#[dev-dependencies]

[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.10"
