[package]
name = "proto_inner"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Game proto library"
edition = "2021"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["prost_style"]
prost_style = ["prost", "tonic"]
google_style = ["protobuf"]

[dependencies]
tonic = { version = "0.10", optional = true }
prost = { path = "../../libs/prost", optional = true  }
protobuf = { path = "../../libs/rust-protobuf/protobuf", optional = true }

#[dev-dependencies]

[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.10"
