[package]
name = "safecomm"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Explode the mine"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]
name = "safecomm"

# conflict with pprof
#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"
chrono = "0.4"
serde_json = "1"
cxx = "1"

hashbrown = { path = "../../libs/hashbrown" }
http = { path = "../../libs/http" }
parking_lot = { path = "../../libs/parking_lot" }
prost = { path = "../../libs/prost"}
roxmltree = { path = "../../libs/roxmltree" }
thread_local = { path = "../../libs/thread_local-rs" }
commlib = { path = "../../libs/commlib" }
my_logger =  { path = "../../libs/my_logger-rs" }

srv_helper = { path = "../../common/srv_helper-rs" }

[build-dependencies]
cxx-build = "1"
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!