[package]
name = "safecomm_server"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Explode service"
edition = "2021"
build = false

# conflict with pprof
#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"
chrono = "0.4"

atomic = { path = "../../libs/atomic-rs" }
base64 = { path = "../../libs/rust-base64" }
hashbrown = { path = "../../libs/hashbrown" }
http = { path = "../../libs/http" }
parking_lot = { path = "../../libs/parking_lot" }
prost = { path = "../../libs/prost"}
roxmltree = { path = "../../libs/roxmltree" }
serde_json = { path = "../../libs/json" }
thread_local = { path = "../../libs/thread_local-rs" }
commlib = { path = "../../libs/commlib" }
db_access = { path = "../../libs/db_access-rs" }
my_logger =  { path = "../../libs/my_logger-rs" }
net_packet = { path = "../../libs/net_packet-rs" }

app_helper = { path = "../../common/app_helper-rs" }
proto = { path = "../../common/proto-rs" }

[target.'cfg(unix)'.dependencies]
pprof = { path = "../../libs/pprof-rs", features = ["flamegraph"] }

#[dev-dependencies]
#[build-dependencies]